# nix-scheduler-hook

./: .gitignore  CODE_REVIEW.md  DESIGN.md  QUALITY_REVIEW.md  README.md  default.nix  flake.nix  logging.hh  main.cpp  meson.build  ocs.patch  openpbs-2711.patch  scheduler.hh  settings.cc  settings.hh  slurm.cpp  slurm.hh  tests.nix
.github/workflows/: test.yml
nix/: meson.build
nix/src/nix/: main.cc
src/: grid.cpp  grid.hh  logging.hh  main.cpp  meson.build  pbs.cpp  pbs.hh  sched_util.hh  scheduler.hh  settings.cpp  settings.hh  slurm-native.cpp  slurm-native.hh  slurm.cpp  slurm.hh
